# Qypha

./: .gitignore  COPYRIGHT  Cargo.toml  Install Qypha for Linux.desktop  Install Qypha for Linux.sh  Install Qypha for Windows.cmd  Install Qypha for Windows.ps1  Install Qypha for macOS.command  README.md  THIRD_PARTY_NOTICES.md  build.rs  setup.sh  setup_windows.ps1  whitepaper.md
apps/qypha-desktop/: PRODUCTION_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/qypha-desktop/src/: App.tsx  conversationOrdering.test.ts  conversationOrdering.ts  conversationPresence.test.ts  conversationPresence.ts  conversationTimeline.test.ts  conversationTimeline.ts  groupConversationTimeline.test.ts  groupConversationTimeline.ts  groupConversationVisibility.test.ts  groupConversationVisibility.ts  groupHydration.test.ts  groupHydration.ts  groupLabels.test.ts  groupLabels.ts  groupLogFallback.test.ts  groupLogFallback.ts  privacy.test.ts  privacy.ts  styles.css  transferUiState.test.ts  transferUiState.ts
apps/qypha-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/qypha-desktop/src-tauri/capabilities/: default.json
apps/qypha-desktop/src-tauri/src/: main.rs
embedded_runtime/: README.md  manifest.toml  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json
embedded_runtime/bridge/: worker-entry.ts
embedded_runtime/bridge/stubs/: provider-auth.ts
embedded_runtime/extensions/memory-core/: index.ts
embedded_runtime/internal/bundled-mcp-plugins/: registry.json
embedded_runtime/memory/: session.md
embedded_runtime/scripts/: bootstrap-bundled-git.mjs  bootstrap-bundled-playwright.mjs  bootstrap-bundled-python.mjs  build-bundled-mcp.mjs  bundled-python-docgen-requirements.txt  document_generate.py  smoke-qypha-embedded-runtime.mjs
embedded_runtime/src/: utils.ts
embedded_runtime/src/agents/: agent-paths.ts  channel-tools.ts  embedded-capability-config.ts  embedded-pi-mcp.ts  mcp-stdio.ts  models-config.plan.ts  openclaw-tools.ts  pi-bundle-mcp-tools.ts  pi-embedded-subscribe.handlers.tools.ts  pi-tools.ts  runtime-plugins.ts  skills-clawhub.ts  skills-install-download.ts  skills-install.ts  skills-verify.ts  subagent-attachments.ts  subagent-registry.store.ts  system-prompt-report.ts  system-prompt.ts  tool-catalog.ts  tool-display-overrides.json  tool-mutation.ts  workspace.ts
embedded_runtime/src/browser/: chrome-mcp.ts  chrome.profile-decoration.ts  output-atomic.ts
embedded_runtime/src/cli/: mcp-cli.ts  profile.ts  skills-cli.ts
embedded_runtime/src/config/: mcp-config.ts  paths.ts  state-dir-dotenv.ts  types.tools.ts
embedded_runtime/src/daemon/: paths.ts  service-env.ts
embedded_runtime/src/hooks/: llm-slug-generator.ts
embedded_runtime/src/infra/: archive-staging.ts  backup-create.ts  clawhub.ts  home-dir.ts  install-package-dir.ts  openclaw-root.ts  state-migrations.ts  tmp-openclaw-dir.ts  update-runner.ts
embedded_runtime/src/media/: image-ops.ts  pdf-extract.ts  pdf-ocr.ts
embedded_runtime/src/media-understanding/: image.ts
embedded_runtime/src/plugin-sdk/: memory-core-host-runtime-core.ts  memory-core-host-runtime-files.ts
embedded_runtime/src/plugins/: bundled-dir.ts  cache-controls.ts  marketplace.ts  roots.ts  signal-cli-install.ts
embedded_runtime/src/secrets/: runtime.ts  storage-scan.ts
embedded_runtime/src/types/: baileys.d.ts  slack-sdk.d.ts
proto/: agent_message.proto
scripts/: generate_clean_logo.py
src/: COPYRIGHT  main.rs
src/agent/: contact_identity.rs  daemon.rs  init.rs  launch.rs  mod.rs  status.rs
src/agent/daemon/: bootstrap.rs  chat_shared.rs  cleanup.rs  command_helpers.rs  commands.rs  contact_mailbox_runtime.rs  contact_promotion.rs  contact_request_commands.rs  contact_requests.rs  did_connect_commands.rs  did_profile_cache.rs  group_invites.rs  handshake.rs  handshake_request_gate.rs  headless.rs  incoming.rs  incoming_connect_gate.rs  invite_shared.rs  iroh_command_chat.rs  iroh_command_domains.rs  iroh_command_handlers.rs  iroh_command_invite.rs  iroh_command_peer.rs  iroh_command_transfer.rs  iroh_contact_delivery.rs  iroh_event_connection.rs  iroh_event_domains.rs  iroh_event_handlers.rs  iroh_identity.rs  iroh_runtime.rs  libp2p_command_chat.rs  libp2p_command_domains.rs  (+18 more)
src/artifact/: chain_hash.rs  chunked_transfer.rs  manifest.rs  mod.rs  store.rs  transfer.rs
src/config/: encrypted_config.rs  mod.rs
src/control_plane/: audit.rs  log_policy.rs  mod.rs  policy.rs  rbac.rs
src/crypto/: at_rest.rs  double_ratchet.rs  encryption.rs  identity.rs  key_rotation.rs  keystore.rs  merkle.rs  mod.rs  rate_limiter.rs  replay_guard.rs  request_nonce.rs  shamir.rs  signing.rs
src/network/: codec.rs  contact_bundle.rs  contact_bundle_iroh.rs  contact_bundle_store.rs  contact_bundle_transport.rs  contact_did.rs  contact_mailbox.rs  contact_mailbox_store.rs  contact_mailbox_transport.rs  contact_request.rs  did_profile.rs  did_profile_store.rs  direct_invite_token.rs  discovery.rs  group_invite_bundle.rs  group_invite_bundle_iroh.rs  group_invite_bundle_store.rs  group_invite_bundle_transport.rs  invite.rs  iroh_transport.rs  mailbox_bootstrap.rs  mailbox_service.rs  mailbox_transport.rs  mod.rs  node.rs  peer_store.rs  protocol.rs  tor_bridge.rs  tor_mailbox.rs  tor_transport.rs
src/os_adapter/: filesystem.rs  home.rs  mod.rs  secure_wipe.rs  shell.rs
src/runtime/: contracts.rs  embedded_bridge.rs  embedded_openclaw.rs  mod.rs
src/shadow/: channel.rs  mod.rs
src/tools/: mod.rs
(+60 files in other folders)
