[package]
name = "qypha"
version = "0.1.0"
edition = "2021"
authors = ["Cagatay Demirbas"]
description = "Enterprise-grade cryptographic agent network with E2EE, Shadow Mode, and artifact transfer"
license = "AGPL-3.0-only"
repository = "https://github.com/CagatayDemirbass/Qypha"
readme = "README.md"
keywords = ["ai", "agent", "enterprise", "cryptography", "p2p"]
categories = ["network-programming", "cryptography"]

[dependencies]
# ─── Async Runtime ───
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# ─── Cryptography (audited, FIPS-friendly) ───
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
chacha20poly1305 = "0.10"          # Alternative AEAD
argon2 = "0.5"                      # Key derivation
zeroize = { version = "1.8", features = ["derive"] }  # Secure memory scrubbing
pqc_kyber = { version = "0.7", features = ["kyber1024"] }  # Post-quantum Kyber-1024 KEM (NIST Level 5, AES-256 equivalent)
hkdf = "0.12"                       # HKDF-SHA256 key derivation
aegis = "0.9"                       # AEGIS-256 AEAD (key-committing, 2-5x faster than AES-GCM, 256-bit nonce)

# ─── OS / Memory Protection ───
libc = "0.2"                         # mlockall for swap prevention

# ─── P2P Networking ───
iroh = "0.96.1"
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "mdns",
    "kad",
    "request-response",
    "cbor",
    "macros",
    "ping",
    "relay",    # Circuit relay v2 — public relay node desteği
    "dcutr",    # Direct Connection Upgrade through Relay (hole punching)
] }

# ─── Serialization ───
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"                      # Protocol Buffers
prost-types = "0.13"
bincode = "1"
toml = "0.8"
cbor4ii = { version = "0.3", features = ["use_alloc", "serde1"] }
uuid = { version = "1", features = ["v4", "serde"] }

# ─── CLI & Logging ───
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
colored = "2"
indicatif = "0.17"                  # Progress bars
dialoguer = "0.11"                  # Interactive prompts
rustyline = "14"                    # Raw-mode line editor (bypasses terminal MAX_CANON limit)

# ─── Database ───
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate"] }

# ─── HTTP/WebSocket ───
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ─── Tor / Anonymous Transport ───
arti-client = { version = "0.25", features = ["tokio", "native-tls", "onion-service-client", "onion-service-service"] }
tor-rtcompat = { version = "0.25", features = ["tokio", "native-tls"] }
tor-hsservice = "0.25"
tor-cell = "0.25"
fs-mistrust = "0.8"

# ─── OS Interaction ───
sysinfo = "0.31"
which = "7"
notify = "7"                        # File system watcher
tempfile = "3"
eframe = { version = "0.29", default-features = true }
dirs = "5"
keyring = "3.6"

# ─── Misc ───
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"
dashmap = "6"                       # Concurrent hashmap
bytes = "1"
flate2 = "1"                        # Gzip compression
tar = "0.4"                         # Tar archive
walkdir = "2"                       # Directory traversal
sharks = "0.5"                      # Shamir Secret Sharing (threshold decryption)

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[[bin]]
name = "qypha"
path = "src/main.rs"

[[bin]]
name = "qypha-native"
path = "src/bin/qypha_native.rs"
