[package]
name = "qypha-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Cagatay Demirbas"]
description = "Qypha desktop shell (Tauri 2)"
license = "AGPL-3.0-only"
repository = "https://github.com/CagatayDemirbass/Qypha"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
toml = "0.8"
rfd = "0.14"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3.6"
bs58 = "0.5"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSOpenPanel", "NSPanel", "NSResponder", "NSSavePanel", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
